# peid

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
peid/: __init__.py  __main__.py  userdb.ini  userdb.txt
src/peid/: VERSION.txt  __info__.py  __init__.py  __main__.py  pe.py
src/peid/db/: .userdb_txt.json  __init__.py  userdb.txt
src/peid/exe/: __common__.py  __init__.py  msdos.py  pe.py
