[metadata]
name = peid
version = file: peid/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
home_page = https://github.com/dhondta/peid
description = Python implementation of the Packed Executable iDentifier (PEiD)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    packing
    packed-executable
    packing-detection
    pe
license = GPLv3
license-file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Security

[options]
packages = find:
include_package_data = False
install_requires =
    pefile
setup_requires = setuptools
python_requires = >=3.6.0,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    peid = peid.__main__:main
    peid-sig = peid.__main__:peidsig
